[tool.poetry]
name = "d20-governance"
version = "0.1.0"
description = "A governance game."
authors = ["d20-team"]
readme = "README.md"
packages = [{include = "d20_governance"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
poetry-dotenv-plugin = "^0.1.0"
pyaml = "^21.10.1"
emoji = "^2.2.0"
langchain = "^0.0.149"
openai = "^0.27.4"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
